# omegaflow

./: .gitignore  CHANGELOG.md  MAINTAINERS.md  README.md  hatch_build.py  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  deploy-website.yml  publish.yml
.omegaflow/: config.yaml
changes/: +active-build-progress.feature.md  +audio-wait-resume.bugfix.md  +bounded-run-retention.feature.md  +branded-playback-feedback.feature.md  +browser-beat-chrome.feature.md  +browser-beat-pointer-visibility.feature.md  +browser-captured-waits.feature.md  +browser-clip-playback.bugfix.md  +browser-clip-seek-starvation.bugfix.md  +browser-first-stable-end-frame.bugfix.md  +browser-fragment-boundary-flicker.bugfix.md  +browser-hidden-chrome.bugfix.md  +browser-initial-capture-timeout.bugfix.md  +browser-pointer-outline.bugfix.md  +build-progress.feature.md  +compact-mobile-transport.bugfix.md  +compact-narration-tracking.bugfix.md  +continuous-browser-fragments.bugfix.md  +continuous-narration-playback.bugfix.md  +early-playback-voiceover.bugfix.md  +guided-checkpoint-content.feature.md  +h264-browser-motion.bugfix.md  +homepage-player-demo.bugfix.md  +narration-token-alignment.bugfix.md  +nested-browser-media-diagnostics.feature.md  +opaque-browser-fades.bugfix.md  +playback-cover-logo-size.bugfix.md  +quickstart-progress.feature.md  +realtime-terminal-tui.feature.md  +recorded-browser-handoff.feature.md  +recording-collections.feature.md  +refreshing-watch-routes.feature.md  +scrubber-one-sided-snap.bugfix.md  +scrubber-tooltip-layering.bugfix.md  +terminal-text-highlight.feature.md  +visible-player-load-errors.bugfix.md  +watch-fixed-port.feature.md  +watch-player-pagehide-audio.bugfix.md  +watch-without-browser.feature.md  README.md
docs/: BACKLOG.md  ideas.md  omegaflow-video-output-contract.md  runtime-dependencies.md  video-output-contract.md
docs/design/: README.md
docs/future/: arbiter-cleanup.md  branching-routing-design.md  browser-recording-design.md  browser-recording-hld.md  browser-recording-phase0-measurements.json  ideas.md  omegaflow-graph-playback.md  studio-graph-playback.md  website-and-tutorial-design.md
docs/future/prototype/core/: pyproject.toml
docs/future/prototype/core/src/omegaflow/: __init__.py  engine.py  nodes.py
docs/future/prototype/core/tests/: test_engine.py
examples/arbiter-install/: README.md
recordings/: config.yaml  getting-started.md  hello.md
recordings/browser-recording-narration-smoke/: index.md
recordings/browser-recording-reference/: index.md
recordings/getting-started/: build-demo-project.sh  create-demo-project.sh  inspect-demo-project.sh  omegaflow.md  play-demo-project.sh
recordings/hello/: omegaflow.md
recordings/quickstart/: index.md
recordings/quickstart-demo/: index.md  omegaflow.md
recordings/tutorial/: index.md
src/omegaflow/: __init__.py  align_cast.py  audio.py  browser_capture.py  browser_handoff.py  browser_runtime.py  browser_visuals.py  capture.py  presentation.py  presentation_build.py  presentation_compiler.py  presentation_schema.py  publish.py  record.py  recording_plan.py  retime_cast.py  studio.py  studio_config.py  terminal_capture.py  terminal_style.py  tool_progress.py
src/omegaflow_studio/: __init__.py  align_cast.py  audio.py  record.py  retime_cast.py  studio.py  studio_config.py  terminal_style.py  tool_progress.py
studio/conf/: config.yaml
studio/recordings/: getting-started.md
tests/: test_brand_assets.py  test_browser_capture.py  test_browser_handoff.py  test_browser_phase0.py  test_browser_runtime.py  test_capture.py  test_capture_integration.py  test_cast_player_browser.py  test_cast_player_core.py  test_cast_player_embed.py  test_cast_player_watch.py  test_presentation.py  test_presentation_build.py  test_presentation_compiler.py  test_publish.py  test_recording_plan.py  test_release.py  test_studio_cli.py  test_terminal_capture.py  test_watch_server.py
tools/: browser_phase0.py  release.py  vendor_asciinema.py
website/: docusaurus.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sidebars.js
website/docs/: configuration.md  intro.md  omegaflow-studio.md  omegaflow-video.md  omegaflow.md  quick-start.md  (+3 more)
(+120 files in other folders)
