[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "omegaflow"
version = "0.3.0"
description = "Scripted terminal and video flow authoring for OmegaFlow"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Omry Yadan" },
]
dependencies = [
  "hydra-core==1.4.0.dev5",
  "omegaconf>=2.3",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "hatchling>=1.26",
  "nox>=2025.5.1",
  "pytest>=8.0",
]

[project.scripts]
omegaflow = "omegaflow.studio:main"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/omegaflow"]
artifacts = [
  "/src/omegaflow/bin/asciinema",
  "/src/omegaflow/bin/asciinema.platform",
]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/hatch_build.py",
  "/noxfile.py",
  "/pyproject.toml",
  "/src",
  "/tests",
  "/tools",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
