[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "omegaflow"
version = "0.9.0"
description = "Scripted terminal and video flow authoring for OmegaFlow"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Omry Yadan" },
]
dependencies = [
  "hydra-core==1.4.0.dev5",
  "omegaconf>=2.3",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
browser = [
  "playwright==1.61.0",
]
dev = [
  "build>=1.2",
  "hatchling>=1.26",
  "nox>=2025.5.1",
  "pytest>=8.0",
  "towncrier>=25.8",
]

[project.scripts]
omegaflow = "omegaflow.studio:main"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/omegaflow"]
artifacts = [
  "/src/omegaflow/bin/asciinema",
  "/src/omegaflow/bin/asciinema.platform",
]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/hatch_build.py",
  "/noxfile.py",
  "/pyproject.toml",
  "/src",
  "/tests",
  "/tools",
]

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/omry/omegaflow/issues/{issue})"
wrap = true
all_bullets = true
orphan_prefix = "+"
ignore = ["README.md"]

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Maintenance"
showcontent = true

[tool.pytest.ini_options]
testpaths = ["tests"]
