[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omegaflow"
version = "0.1.0"
description = "Interactive graph-based execution engine"
authors = [{name = "OmegaFlow Team"}]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
